lab3/Code/syntax.output
State 22 conflicts: 1 shift/reduce
State 51 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList
    2        | ExtDefList error

    3 ExtDefList: ExtDef ExtDefList
    4           | %empty

    5 ExtDef: Specifier ExtDecList SEMI
    6       | Specifier SEMI
    7       | Specifier FunDec CompSt
    8       | Specifier FunDec SEMI
    9       | Specifier error

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList
   12           | VarDec error

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag
   17                | STRUCT OptTag LC DefList error
   18                | STRUCT OptTag LC error RC
   19                | STRUCT error LC DefList RC

   20 OptTag: ID
   21       | %empty

   22 Tag: ID

   23 VarDec: ID
   24       | VarDec LB INT RB
   25       | VarDec LB error RB

   26 FunDec: ID LP VarList RP
   27       | ID LP RP
   28       | ID LP error
   29       | ID LP error RP

   30 VarList: ParamDec COMMA VarList
   31        | ParamDec
   32        | ParamDec COMMA error

   33 ParamDec: Specifier VarDec
   34         | Specifier error

   35 CompSt: LC DefList StmtList RC
   36       | error RC

   37 StmtList: Stmt StmtList
   38         | %empty

   39 Stmt: Exp SEMI
   40     | CompSt
   41     | RETURN Exp SEMI
   42     | IF LP Exp RP Stmt
   43     | IF LP Exp RP Stmt ELSE Stmt
   44     | WHILE LP Exp RP Stmt
   45     | RETURN error SEMI
   46     | error SEMI
   47     | IF LP error RP Stmt
   48     | IF error Exp RP Stmt
   49     | IF LP Exp error Stmt
   50     | IF error Exp RP Stmt ELSE Stmt
   51     | IF LP error RP Stmt ELSE Stmt
   52     | IF LP Exp error Stmt ELSE Stmt
   53     | IF LP Exp RP error ELSE Stmt
   54     | WHILE error Exp RP Stmt
   55     | WHILE LP error RP Stmt
   56     | WHILE LP Exp error Stmt

   57 DefList: Def DefList
   58        | %empty

   59 Def: Specifier DecList SEMI
   60    | Specifier error SEMI
   61    | Specifier DecList error

   62 DecList: Dec
   63        | Dec COMMA DecList
   64        | Dec error DecList
   65        | Dec error

   66 Dec: VarDec
   67    | VarDec ASSIGNOP Exp
   68    | VarDec ASSIGNOP error

   69 Exp: Exp ASSIGNOP Exp
   70    | Exp AND Exp
   71    | Exp OR Exp
   72    | Exp RELOP Exp
   73    | Exp PLUS Exp
   74    | Exp MINUS Exp
   75    | Exp STAR Exp
   76    | Exp DIV Exp
   77    | LP Exp RP
   78    | MINUS Exp
   79    | NOT Exp
   80    | ID LP Args RP
   81    | ID LP RP
   82    | Exp LB Exp RB
   83    | Exp DOT ID
   84    | ID
   85    | INT
   86    | FLOAT
   87    | Exp LB error RB
   88    | error RP
   89    | ID LP Args error
   90    | ID LP error
   91    | Exp ASSIGNOP error
   92    | Exp AND error
   93    | Exp OR error
   94    | Exp RELOP error
   95    | Exp PLUS error
   96    | Exp MINUS error
   97    | Exp STAR error
   98    | Exp DIV error
   99    | MINUS error
  100    | NOT error
  101    | LP Exp error

  102 Args: Exp COMMA Args
  103     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 2 9 12 17 18 19 25 28 29 32 34 36 45 46 47 48 49 50 51 52 53 54 55 56 60 61 64 65 68 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101
    INT <type_int> (258) 24 85
    FLOAT <type_float> (259) 86
    ID <type_string> (260) 20 22 23 26 27 28 29 80 81 83 84 89 90
    TYPE <type_string> (261) 13
    RELOP <type_string> (262) 72 94
    SEMI (263) 5 6 8 39 41 45 46 59 60
    COMMA (264) 11 30 32 63 102
    ASSIGNOP (265) 67 68 69 91
    PLUS (266) 73 95
    MINUS (267) 74 78 96 99
    STAR (268) 75 97
    DIV (269) 76 98
    AND (270) 70 92
    OR (271) 71 93
    DOT (272) 83
    NOT (273) 79 100
    LP (274) 26 27 28 29 42 43 44 47 49 51 52 53 55 56 77 80 81 89 90 101
    RP (275) 26 27 29 42 43 44 47 48 50 51 53 54 55 77 80 81 88
    LB (276) 24 25 82 87
    RB (277) 24 25 82 87
    LC (278) 15 17 18 19 35
    RC (279) 15 18 19 35 36
    STRUCT (280) 15 16 17 18 19
    RETURN (281) 41 45
    IF (282) 42 43 47 48 49 50 51 52 53
    ELSE (283) 43 50 51 52 53
    WHILE (284) 44 54 55 56
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <type_pnode> (32)
        on left: 1 2
        on right: 0
    ExtDefList <type_pnode> (33)
        on left: 3 4
        on right: 1 2 3
    ExtDef <type_pnode> (34)
        on left: 5 6 7 8 9
        on right: 3
    ExtDecList <type_pnode> (35)
        on left: 10 11 12
        on right: 5 11
    Specifier <type_pnode> (36)
        on left: 13 14
        on right: 5 6 7 8 9 33 34 59 60 61
    StructSpecifier <type_pnode> (37)
        on left: 15 16 17 18 19
        on right: 14
    OptTag <type_pnode> (38)
        on left: 20 21
        on right: 15 17 18
    Tag <type_pnode> (39)
        on left: 22
        on right: 16
    VarDec <type_pnode> (40)
        on left: 23 24 25
        on right: 10 11 12 24 25 33 66 67 68
    FunDec <type_pnode> (41)
        on left: 26 27 28 29
        on right: 7 8
    VarList <type_pnode> (42)
        on left: 30 31 32
        on right: 26 30
    ParamDec <type_pnode> (43)
        on left: 33 34
        on right: 30 31 32
    CompSt <type_pnode> (44)
        on left: 35 36
        on right: 7 40
    StmtList <type_pnode> (45)
        on left: 37 38
        on right: 35 37
    Stmt <type_pnode> (46)
        on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
        on right: 37 42 43 44 47 48 49 50 51 52 53 54 55 56
    DefList <type_pnode> (47)
        on left: 57 58
        on right: 15 17 19 35 57
    Def <type_pnode> (48)
        on left: 59 60 61
        on right: 57
    DecList <type_pnode> (49)
        on left: 62 63 64 65
        on right: 59 61 63 64
    Dec <type_pnode> (50)
        on left: 66 67 68
        on right: 62 63 64 65
    Exp <type_pnode> (51)
        on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101
        on right: 39 41 42 43 44 48 49 50 52 53 54 56 67 69 70 71 72 73 74 75 76 77 78 79 82 83 87 91 92 93 94 95 96 97 98 101 102 103
    Args <type_pnode> (52)
        on left: 102 103
        on right: 80 89 102


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 4 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   13 Specifier: TYPE .

    $default  reduce using rule 13 (Specifier)


State 2

   15 StructSpecifier: STRUCT . OptTag LC DefList RC
   16                | STRUCT . Tag
   17                | STRUCT . OptTag LC DefList error
   18                | STRUCT . OptTag LC error RC
   19                | STRUCT . error LC DefList RC

    error  shift, and go to state 8
    ID     shift, and go to state 9

    LC  reduce using rule 21 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 4

    1 Program: ExtDefList .
    2        | ExtDefList . error

    error  shift, and go to state 13

    $end  reduce using rule 1 (Program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 4 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    5 ExtDef: Specifier . ExtDecList SEMI
    6       | Specifier . SEMI
    7       | Specifier . FunDec CompSt
    8       | Specifier . FunDec SEMI
    9       | Specifier . error

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 7

   14 Specifier: StructSpecifier .

    $default  reduce using rule 14 (Specifier)


State 8

   19 StructSpecifier: STRUCT error . LC DefList RC

    LC  shift, and go to state 21


State 9

   20 OptTag: ID .
   22 Tag: ID .

    LC        reduce using rule 20 (OptTag)
    $default  reduce using rule 22 (Tag)


State 10

   15 StructSpecifier: STRUCT OptTag . LC DefList RC
   17                | STRUCT OptTag . LC DefList error
   18                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 22


State 11

   16 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 16 (StructSpecifier)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 Program: ExtDefList error .

    $default  reduce using rule 2 (Program)


State 14

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 15

    9 ExtDef: Specifier error .

    $default  reduce using rule 9 (ExtDef)


State 16

   23 VarDec: ID .
   26 FunDec: ID . LP VarList RP
   27       | ID . LP RP
   28       | ID . LP error
   29       | ID . LP error RP

    LP  shift, and go to state 23

    $default  reduce using rule 23 (VarDec)


State 17

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 18

    5 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   12           | VarDec . error
   24 VarDec: VarDec . LB INT RB
   25       | VarDec . LB error RB

    error  shift, and go to state 25
    COMMA  shift, and go to state 26
    LB     shift, and go to state 27

    SEMI  reduce using rule 10 (ExtDecList)


State 20

    7 ExtDef: Specifier FunDec . CompSt
    8       | Specifier FunDec . SEMI

    error  shift, and go to state 28
    SEMI   shift, and go to state 29
    LC     shift, and go to state 30

    CompSt  go to state 31


State 21

   19 StructSpecifier: STRUCT error LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 58 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 7
    DefList          go to state 33
    Def              go to state 34


State 22

   15 StructSpecifier: STRUCT OptTag LC . DefList RC
   17                | STRUCT OptTag LC . DefList error
   18                | STRUCT OptTag LC . error RC

    error   shift, and go to state 35
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error  [reduce using rule 58 (DefList)]
    RC     reduce using rule 58 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 7
    DefList          go to state 36
    Def              go to state 34


State 23

   26 FunDec: ID LP . VarList RP
   27       | ID LP . RP
   28       | ID LP . error
   29       | ID LP . error RP

    error   shift, and go to state 37
    TYPE    shift, and go to state 1
    RP      shift, and go to state 38
    STRUCT  shift, and go to state 2

    Specifier        go to state 39
    StructSpecifier  go to state 7
    VarList          go to state 40
    ParamDec         go to state 41


State 24

    5 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 5 (ExtDef)


State 25

   12 ExtDecList: VarDec error .

    $default  reduce using rule 12 (ExtDecList)


State 26

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 42

    ExtDecList  go to state 43
    VarDec      go to state 19


State 27

   24 VarDec: VarDec LB . INT RB
   25       | VarDec LB . error RB

    error  shift, and go to state 44
    INT    shift, and go to state 45


State 28

   36 CompSt: error . RC

    RC  shift, and go to state 46


State 29

    8 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 8 (ExtDef)


State 30

   35 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 58 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 7
    DefList          go to state 47
    Def              go to state 34


State 31

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 32

   59 Def: Specifier . DecList SEMI
   60    | Specifier . error SEMI
   61    | Specifier . DecList error

    error  shift, and go to state 48
    ID     shift, and go to state 42

    VarDec   go to state 49
    DecList  go to state 50
    Dec      go to state 51


State 33

   19 StructSpecifier: STRUCT error LC DefList . RC

    RC  shift, and go to state 52


State 34

   57 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 58 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 7
    DefList          go to state 53
    Def              go to state 34


State 35

   18 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 54


State 36

   15 StructSpecifier: STRUCT OptTag LC DefList . RC
   17                | STRUCT OptTag LC DefList . error

    error  shift, and go to state 55
    RC     shift, and go to state 56


State 37

   28 FunDec: ID LP error .
   29       | ID LP error . RP

    RP  shift, and go to state 57

    $default  reduce using rule 28 (FunDec)


State 38

   27 FunDec: ID LP RP .

    $default  reduce using rule 27 (FunDec)


State 39

   33 ParamDec: Specifier . VarDec
   34         | Specifier . error

    error  shift, and go to state 58
    ID     shift, and go to state 42

    VarDec  go to state 59


State 40

   26 FunDec: ID LP VarList . RP

    RP  shift, and go to state 60


State 41

   30 VarList: ParamDec . COMMA VarList
   31        | ParamDec .
   32        | ParamDec . COMMA error

    COMMA  shift, and go to state 61

    $default  reduce using rule 31 (VarList)


State 42

   23 VarDec: ID .

    $default  reduce using rule 23 (VarDec)


State 43

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 44

   25 VarDec: VarDec LB error . RB

    RB  shift, and go to state 62


State 45

   24 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 63


State 46

   36 CompSt: error RC .

    $default  reduce using rule 36 (CompSt)


State 47

   35 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 64
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    MINUS   shift, and go to state 68
    NOT     shift, and go to state 69
    LP      shift, and go to state 70
    LC      shift, and go to state 30
    RETURN  shift, and go to state 71
    IF      shift, and go to state 72
    WHILE   shift, and go to state 73

    RC  reduce using rule 38 (StmtList)

    CompSt    go to state 74
    StmtList  go to state 75
    Stmt      go to state 76
    Exp       go to state 77


State 48

   60 Def: Specifier error . SEMI

    SEMI  shift, and go to state 78


State 49

   24 VarDec: VarDec . LB INT RB
   25       | VarDec . LB error RB
   66 Dec: VarDec .
   67    | VarDec . ASSIGNOP Exp
   68    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 79
    LB        shift, and go to state 27

    $default  reduce using rule 66 (Dec)


State 50

   59 Def: Specifier DecList . SEMI
   61    | Specifier DecList . error

    error  shift, and go to state 80
    SEMI   shift, and go to state 81


State 51

   62 DecList: Dec .
   63        | Dec . COMMA DecList
   64        | Dec . error DecList
   65        | Dec . error

    error  shift, and go to state 82
    COMMA  shift, and go to state 83

    error  [reduce using rule 62 (DecList)]
    SEMI   reduce using rule 62 (DecList)


State 52

   19 StructSpecifier: STRUCT error LC DefList RC .

    $default  reduce using rule 19 (StructSpecifier)


State 53

   57 DefList: Def DefList .

    $default  reduce using rule 57 (DefList)


State 54

   18 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 18 (StructSpecifier)


State 55

   17 StructSpecifier: STRUCT OptTag LC DefList error .

    $default  reduce using rule 17 (StructSpecifier)


State 56

   15 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 15 (StructSpecifier)


State 57

   29 FunDec: ID LP error RP .

    $default  reduce using rule 29 (FunDec)


State 58

   34 ParamDec: Specifier error .

    $default  reduce using rule 34 (ParamDec)


State 59

   24 VarDec: VarDec . LB INT RB
   25       | VarDec . LB error RB
   33 ParamDec: Specifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 33 (ParamDec)


State 60

   26 FunDec: ID LP VarList RP .

    $default  reduce using rule 26 (FunDec)


State 61

   30 VarList: ParamDec COMMA . VarList
   32        | ParamDec COMMA . error

    error   shift, and go to state 84
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 39
    StructSpecifier  go to state 7
    VarList          go to state 85
    ParamDec         go to state 41


State 62

   25 VarDec: VarDec LB error RB .

    $default  reduce using rule 25 (VarDec)


State 63

   24 VarDec: VarDec LB INT RB .

    $default  reduce using rule 24 (VarDec)


State 64

   36 CompSt: error . RC
   46 Stmt: error . SEMI
   88 Exp: error . RP

    SEMI  shift, and go to state 86
    RP    shift, and go to state 87
    RC    shift, and go to state 46


State 65

   85 Exp: INT .

    $default  reduce using rule 85 (Exp)


State 66

   86 Exp: FLOAT .

    $default  reduce using rule 86 (Exp)


State 67

   80 Exp: ID . LP Args RP
   81    | ID . LP RP
   84    | ID .
   89    | ID . LP Args error
   90    | ID . LP error

    LP  shift, and go to state 88

    $default  reduce using rule 84 (Exp)


State 68

   78 Exp: MINUS . Exp
   99    | MINUS . error

    error  shift, and go to state 89
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 90


State 69

   79 Exp: NOT . Exp
  100    | NOT . error

    error  shift, and go to state 91
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 92


State 70

   77 Exp: LP . Exp RP
  101    | LP . Exp error

    error  shift, and go to state 93
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 94


State 71

   41 Stmt: RETURN . Exp SEMI
   45     | RETURN . error SEMI

    error  shift, and go to state 95
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 96


State 72

   42 Stmt: IF . LP Exp RP Stmt
   43     | IF . LP Exp RP Stmt ELSE Stmt
   47     | IF . LP error RP Stmt
   48     | IF . error Exp RP Stmt
   49     | IF . LP Exp error Stmt
   50     | IF . error Exp RP Stmt ELSE Stmt
   51     | IF . LP error RP Stmt ELSE Stmt
   52     | IF . LP Exp error Stmt ELSE Stmt
   53     | IF . LP Exp RP error ELSE Stmt

    error  shift, and go to state 97
    LP     shift, and go to state 98


State 73

   44 Stmt: WHILE . LP Exp RP Stmt
   54     | WHILE . error Exp RP Stmt
   55     | WHILE . LP error RP Stmt
   56     | WHILE . LP Exp error Stmt

    error  shift, and go to state 99
    LP     shift, and go to state 100


State 74

   40 Stmt: CompSt .

    $default  reduce using rule 40 (Stmt)


State 75

   35 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 101


State 76

   37 StmtList: Stmt . StmtList

    error   shift, and go to state 64
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    MINUS   shift, and go to state 68
    NOT     shift, and go to state 69
    LP      shift, and go to state 70
    LC      shift, and go to state 30
    RETURN  shift, and go to state 71
    IF      shift, and go to state 72
    WHILE   shift, and go to state 73

    RC  reduce using rule 38 (StmtList)

    CompSt    go to state 74
    StmtList  go to state 102
    Stmt      go to state 76
    Exp       go to state 77


State 77

   39 Stmt: Exp . SEMI
   69 Exp: Exp . ASSIGNOP Exp
   70    | Exp . AND Exp
   71    | Exp . OR Exp
   72    | Exp . RELOP Exp
   73    | Exp . PLUS Exp
   74    | Exp . MINUS Exp
   75    | Exp . STAR Exp
   76    | Exp . DIV Exp
   82    | Exp . LB Exp RB
   83    | Exp . DOT ID
   87    | Exp . LB error RB
   91    | Exp . ASSIGNOP error
   92    | Exp . AND error
   93    | Exp . OR error
   94    | Exp . RELOP error
   95    | Exp . PLUS error
   96    | Exp . MINUS error
   97    | Exp . STAR error
   98    | Exp . DIV error

    RELOP     shift, and go to state 103
    SEMI      shift, and go to state 104
    ASSIGNOP  shift, and go to state 105
    PLUS      shift, and go to state 106
    MINUS     shift, and go to state 107
    STAR      shift, and go to state 108
    DIV       shift, and go to state 109
    AND       shift, and go to state 110
    OR        shift, and go to state 111
    DOT       shift, and go to state 112
    LB        shift, and go to state 113


State 78

   60 Def: Specifier error SEMI .

    $default  reduce using rule 60 (Def)


State 79

   67 Dec: VarDec ASSIGNOP . Exp
   68    | VarDec ASSIGNOP . error

    error  shift, and go to state 114
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 115


State 80

   61 Def: Specifier DecList error .

    $default  reduce using rule 61 (Def)


State 81

   59 Def: Specifier DecList SEMI .

    $default  reduce using rule 59 (Def)


State 82

   64 DecList: Dec error . DecList
   65        | Dec error .

    ID  shift, and go to state 42

    $default  reduce using rule 65 (DecList)

    VarDec   go to state 49
    DecList  go to state 116
    Dec      go to state 51


State 83

   63 DecList: Dec COMMA . DecList

    ID  shift, and go to state 42

    VarDec   go to state 49
    DecList  go to state 117
    Dec      go to state 51


State 84

   32 VarList: ParamDec COMMA error .

    $default  reduce using rule 32 (VarList)


State 85

   30 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 30 (VarList)


State 86

   46 Stmt: error SEMI .

    $default  reduce using rule 46 (Stmt)


State 87

   88 Exp: error RP .

    $default  reduce using rule 88 (Exp)


State 88

   80 Exp: ID LP . Args RP
   81    | ID LP . RP
   89    | ID LP . Args error
   90    | ID LP . error

    error  shift, and go to state 118
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70
    RP     shift, and go to state 119

    Exp   go to state 120
    Args  go to state 121


State 89

   88 Exp: error . RP
   99    | MINUS error .

    RP  shift, and go to state 87

    $default  reduce using rule 99 (Exp)


State 90

   69 Exp: Exp . ASSIGNOP Exp
   70    | Exp . AND Exp
   71    | Exp . OR Exp
   72    | Exp . RELOP Exp
   73    | Exp . PLUS Exp
   74    | Exp . MINUS Exp
   75    | Exp . STAR Exp
   76    | Exp . DIV Exp
   78    | MINUS Exp .
   82    | Exp . LB Exp RB
   83    | Exp . DOT ID
   87    | Exp . LB error RB
   91    | Exp . ASSIGNOP error
   92    | Exp . AND error
   93    | Exp . OR error
   94    | Exp . RELOP error
   95    | Exp . PLUS error
   96    | Exp . MINUS error
   97    | Exp . STAR error
   98    | Exp . DIV error

    STAR  shift, and go to state 108
    DIV   shift, and go to state 109
    DOT   shift, and go to state 112
    LB    shift, and go to state 113

    $default  reduce using rule 78 (Exp)


State 91

   88 Exp: error . RP
  100    | NOT error .

    RP  shift, and go to state 87

    $default  reduce using rule 100 (Exp)


State 92

   69 Exp: Exp . ASSIGNOP Exp
   70    | Exp . AND Exp
   71    | Exp . OR Exp
   72    | Exp . RELOP Exp
   73    | Exp . PLUS Exp
   74    | Exp . MINUS Exp
   75    | Exp . STAR Exp
   76    | Exp . DIV Exp
   79    | NOT Exp .
   82    | Exp . LB Exp RB
   83    | Exp . DOT ID
   87    | Exp . LB error RB
   91    | Exp . ASSIGNOP error
   92    | Exp . AND error
   93    | Exp . OR error
   94    | Exp . RELOP error
   95    | Exp . PLUS error
   96    | Exp . MINUS error
   97    | Exp . STAR error
   98    | Exp . DIV error

    DOT  shift, and go to state 112
    LB   shift, and go to state 113

    $default  reduce using rule 79 (Exp)


State 93

   88 Exp: error . RP

    RP  shift, and go to state 87


State 94

   69 Exp: Exp . ASSIGNOP Exp
   70    | Exp . AND Exp
   71    | Exp . OR Exp
   72    | Exp . RELOP Exp
   73    | Exp . PLUS Exp
   74    | Exp . MINUS Exp
   75    | Exp . STAR Exp
   76    | Exp . DIV Exp
   77    | LP Exp . RP
   82    | Exp . LB Exp RB
   83    | Exp . DOT ID
   87    | Exp . LB error RB
   91    | Exp . ASSIGNOP error
   92    | Exp . AND error
   93    | Exp . OR error
   94    | Exp . RELOP error
   95    | Exp . PLUS error
   96    | Exp . MINUS error
   97    | Exp . STAR error
   98    | Exp . DIV error
  101    | LP Exp . error

    error     shift, and go to state 122
    RELOP     shift, and go to state 103
    ASSIGNOP  shift, and go to state 105
    PLUS      shift, and go to state 106
    MINUS     shift, and go to state 107
    STAR      shift, and go to state 108
    DIV       shift, and go to state 109
    AND       shift, and go to state 110
    OR        shift, and go to state 111
    DOT       shift, and go to state 112
    RP        shift, and go to state 123
    LB        shift, and go to state 113


State 95

   45 Stmt: RETURN error . SEMI
   88 Exp: error . RP

    SEMI  shift, and go to state 124
    RP    shift, and go to state 87


State 96

   41 Stmt: RETURN Exp . SEMI
   69 Exp: Exp . ASSIGNOP Exp
   70    | Exp . AND Exp
   71    | Exp . OR Exp
   72    | Exp . RELOP Exp
   73    | Exp . PLUS Exp
   74    | Exp . MINUS Exp
   75    | Exp . STAR Exp
   76    | Exp . DIV Exp
   82    | Exp . LB Exp RB
   83    | Exp . DOT ID
   87    | Exp . LB error RB
   91    | Exp . ASSIGNOP error
   92    | Exp . AND error
   93    | Exp . OR error
   94    | Exp . RELOP error
   95    | Exp . PLUS error
   96    | Exp . MINUS error
   97    | Exp . STAR error
   98    | Exp . DIV error

    RELOP     shift, and go to state 103
    SEMI      shift, and go to state 125
    ASSIGNOP  shift, and go to state 105
    PLUS      shift, and go to state 106
    MINUS     shift, and go to state 107
    STAR      shift, and go to state 108
    DIV       shift, and go to state 109
    AND       shift, and go to state 110
    OR        shift, and go to state 111
    DOT       shift, and go to state 112
    LB        shift, and go to state 113


State 97

   48 Stmt: IF error . Exp RP Stmt
   50     | IF error . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 93
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 126


State 98

   42 Stmt: IF LP . Exp RP Stmt
   43     | IF LP . Exp RP Stmt ELSE Stmt
   47     | IF LP . error RP Stmt
   49     | IF LP . Exp error Stmt
   51     | IF LP . error RP Stmt ELSE Stmt
   52     | IF LP . Exp error Stmt ELSE Stmt
   53     | IF LP . Exp RP error ELSE Stmt

    error  shift, and go to state 127
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 128


State 99

   54 Stmt: WHILE error . Exp RP Stmt

    error  shift, and go to state 93
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 129


State 100

   44 Stmt: WHILE LP . Exp RP Stmt
   55     | WHILE LP . error RP Stmt
   56     | WHILE LP . Exp error Stmt

    error  shift, and go to state 130
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 131


State 101

   35 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 35 (CompSt)


State 102

   37 StmtList: Stmt StmtList .

    $default  reduce using rule 37 (StmtList)


State 103

   72 Exp: Exp RELOP . Exp
   94    | Exp RELOP . error

    error  shift, and go to state 132
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 133


State 104

   39 Stmt: Exp SEMI .

    $default  reduce using rule 39 (Stmt)


State 105

   69 Exp: Exp ASSIGNOP . Exp
   91    | Exp ASSIGNOP . error

    error  shift, and go to state 134
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 135


State 106

   73 Exp: Exp PLUS . Exp
   95    | Exp PLUS . error

    error  shift, and go to state 136
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 137


State 107

   74 Exp: Exp MINUS . Exp
   96    | Exp MINUS . error

    error  shift, and go to state 138
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 139


State 108

   75 Exp: Exp STAR . Exp
   97    | Exp STAR . error

    error  shift, and go to state 140
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 141


State 109

   76 Exp: Exp DIV . Exp
   98    | Exp DIV . error
